k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-depl
  namespace: default
  labels:
    app: ecommerce-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-depl
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: ecommerce-depl
    spec:
      containers:
        - name: ecommerce-api
          image: ecommerce-learn-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: ecommerce-depl
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
